Generar Client Swagger sense warnings i incloure dependències necessàries #938
