# demo/generat/demogenapp-api-interna/openapi/openapi_interna_secure.json
@@ -104,7 +104,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
                 }
               }
             }
@@ -114,7 +114,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
                 }
               }
             }
@@ -188,7 +188,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
                 }
               }
             }
@@ -198,7 +198,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
                 }
               }
             }
@@ -257,12 +257,12 @@
         }
       },
       "RestExceptionInfo" : {
-        "required" : [ "code", "errorMessage" ],
+        "required" : [ "errorMessage" ],
         "type" : "object",
         "properties" : {
-          "code" : {
+          "errorCode" : {
             "type" : "integer",
-            "description" : "Codi de HTTP de l'error. Veure https://en.wikipedia.org/wiki/List_of_HTTP_status_codes.",
+            "description" : "Codi intern de l'error. Si l'Aplicació no gestiona codis d'error llavors val null.",
             "format" : "int32"
           },
           "errorMessage" : {
@@ -271,15 +271,15 @@
           },
           "stackTrace" : {
             "type" : "string",
-            "description" : "Stacktrace de l'excepció si n'hi hagués."
+            "description" : "Stacktrace de l'excepció"
           },
-          "causeException" : {
+          "stackTraceCause" : {
             "type" : "string",
-            "description" : "Tipus de l'excepció origen (cause) si n'hi hagués."
+            "description" : "Stacktrace de l'excepció causant de l'error si n'hi hagués."
           },
-          "causeStackTrace" : {
+          "field" : {
             "type" : "string",
-            "description" : "Stacktrace de l'excepció origen (cause) si n'hi hagués."
+            "description" : "Indica el camp en que hi ha un error de validació."
           }
         },
         "description" : "Estructura de dades utilitzada per passar informació d'un error"
